# RagEval

./: .gitignore  README_INTEGRATION.md  README_PROJECT_HANDLER.md  app.py  pyproject.toml  run_server.py  test_db_fix.py  test_project_handler.py  test_server.py
chunker/: chunker.py
db/: db.py
embedding/: embedding.py
extractors/: __init__.py  csv_extractor.py  doc_extractor.py  docx_extractor.py  excel_extractor.py  md_extractor.py  pdf_extractor.py  registry.py  text_extractor.py  url_extractor.py
handlers/: corpus_handler.py  project_handler.py
quests/: rag-eval-backend.md
store/: base_repo.py  corpus_item_repo.py  corpus_repo.py  project_repo.py
vector_db/: Readme.md  __init__.py  _init_.py  chroma.py  db.py  qdrant.py
